--- a/app/src/main/res/layout/activity_main_screen.xml
+++ b/app/src/main/res/layout/activity_main_screen.xml
@@ -115,13 +115,12 @@
                     app:cardCornerRadius="25dp"
                     app:layout_constraintTop_toBottomOf="@+id/cardViewLogo">
 
-                    <ImageView
+
+                    <androidx.viewpager.widget.ViewPager
+                        android:id="@+id/viewPagerMain"
                         android:layout_width="400dp"
                         android:layout_height="match_parent"
-                        android:layout_gravity="center"
-                        android:scaleType="centerCrop"
-                        android:src="@drawable/action_img" />
-
+                        android:layout_gravity="center" />
 
                     <androidx.constraintlayout.widget.ConstraintLayout
                         android:layout_width="wrap_content"
@@ -147,29 +146,6 @@
                             app:layout_constraintStart_toEndOf="@id/imageViewDecor_1"
                             app:layout_constraintTop_toTopOf="parent" />
                     </androidx.constraintlayout.widget.ConstraintLayout>
-
-                    <TextView
-                        android:id="@+id/textViewPromoName"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textSize="20sp"
-                        android:layout_gravity="center"
-                        android:text="Приведи друга!"
-                        android:textStyle="bold"
-                        android:textColor="@color/white"/>
-
-
-                    <TextView
-                        android:id="@+id/textViewPromoDesc"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="start|bottom"
-                        android:layout_marginStart="20dp"
-                        android:layout_marginEnd="20dp"
-                        android:layout_marginBottom="20dp"
-                        android:text="Сдай старый смартфон и получи скидку 15%"
-                        android:textSize="16sp"
-                        android:textColor="@color/white" />
 
                 </androidx.cardview.widget.CardView>
 
