--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -1,59 +1,103 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:app="http://schemas.android.com/apk/res-auto"
-xmlns:tools="http://schemas.android.com/tools"
-android:id="@+id/constraintChat"
-android:layout_width="match_parent"
-android:layout_height="match_parent"
-tools:context=".views.ChatActivity">
-
-<androidx.appcompat.widget.Toolbar
-    android:id="@+id/toolbarChat"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/constraintChat"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    app:layout_collapseMode="parallax"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toTopOf="parent"
-    app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
+    android:layout_height="match_parent"
+    tools:context=".views.ChatActivity">
 
-    <ImageView
-        android:id="@+id/imageViewLogo"
-        android:layout_width="wrap_content"
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbarChat"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="start"
-        android:padding="10dp"
-        android:scaleType="centerCrop"
-        android:src="@drawable/logo" />
+        app:layout_collapseMode="parallax"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
 
-    <ImageButton
-        android:id="@+id/imageButtonBack"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_gravity="end"
-        android:backgroundTint="@color/transparent"
-        app:srcCompat="@drawable/arrow_back_36" />
+        <ImageView
+            android:id="@+id/imageViewLogo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="start"
+            android:padding="10dp"
+            android:scaleType="centerCrop"
+            android:src="@drawable/logo" />
 
-</androidx.appcompat.widget.Toolbar>
+        <ImageButton
+            android:id="@+id/imageButtonBack"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="end"
+            android:backgroundTint="@color/transparent"
+            app:srcCompat="@drawable/arrow_back_36" />
 
-<TextView
-    android:id="@+id/textViewChat"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    tools:text="Чат с мастером:"
-    android:textAlignment="center"
-    android:textColor="@color/main_dark"
-    android:textSize="16sp"
-    app:layout_constraintTop_toBottomOf="@id/toolbarChat" />
+    </androidx.appcompat.widget.Toolbar>
 
-<androidx.recyclerview.widget.RecyclerView
-    android:id="@+id/recyclerViewCenter"
-    android:layout_width="match_parent"
-    android:layout_height="0dp"
-    app:layout_constraintBottom_toBottomOf="parent"
-    app:layout_constraintTop_toBottomOf="@id/textViewChat">
+    <TextView
+        android:id="@+id/textViewChat"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAlignment="center"
+        android:textColor="@color/main_red"
+        android:textSize="16sp"
+        app:layout_constraintTop_toBottomOf="@id/toolbarChat"
+        tools:text="Чат с мастером:" />
 
-</androidx.recyclerview.widget.RecyclerView>
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerViewCenterChat"
+        android:layout_width="match_parent"
+        android:background="@color/main_green"
+        android:alpha="0.7"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toTopOf="@id/layoutChatChatbox"
+        app:layout_constraintTop_toBottomOf="@id/textViewChat">
+
+    </androidx.recyclerview.widget.RecyclerView>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/layoutChatChatbox"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
+        <androidx.appcompat.widget.AppCompatMultiAutoCompleteTextView
+            android:id="@+id/editChatMessage"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:minHeight="50dp"
+            android:layout_centerVertical="true"
+            android:layout_marginStart="16dp"
+            android:background="@android:color/transparent"
+            android:hint="@string/message_text"
+            android:inputType="textMultiLine"
+            android:maxLines="7"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/buttonChatSend"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:ignore="Autofill" />
+
+        <ImageButton
+            android:id="@+id/buttonChatSend"
+            android:layout_width="64dp"
+            android:layout_height="48dp"
+            android:scaleType="fitCenter"
+            android:padding="8dp"
+            android:background="?attr/selectableItemBackground"
+            android:src="@drawable/send_28"
+            android:textColor="@color/main_dark"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/editChatMessage"
+            app:layout_constraintTop_toTopOf="parent" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+
